<resources>
    <string name="app_name">Face Identification</string>

    <string name="default_nothing">Nothing</string>
    <string name="action_settings">Settings</string>
    <string name="identify_button_text">Who is this?</string>
    <string name="action_register">Register</string>
    <string name="action_verification">Verification</string>
    <string name="add_face_text">Пожалуйста, нажмите на изображение для добавление в БД</string>
    <string name="verify_face_text">Пожалуйста, нажмите на изображение для идентификации</string>
    <string name="input_name">Введите имя</string>
    <string name="face_add_success">Фотография успешно добавлена!</string>
    <string name="face_add_error">Ошибка добавления</string>
    <string name="dialog_save">Сохранить</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="result_text">Результат идентификации</string>
    <string name="currentImgText">Текущее изображение</string>
    <string name="baseImgText">Базовое изображение</string>
    <string name="btn_add_face">Добавить лицо в БД</string>
    <string name="btn_verify">Идентификация</string>
    <string name="btn_delete_all">Очистить БД</string>
</resources>
