<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">


    <Button
        android:id="@+id/btnVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_shape"
        android:padding="4dp"
        android:text="@string/btn_add_face"
        android:textSize="15sp"
        android:theme="@style/MyButton" />

    <Button
        android:id="@+id/btnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnVerify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/button_shape"
        android:padding="4dp"
        android:text="@string/btn_verify"
        android:textSize="15sp"
        android:theme="@style/MyButton" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_shape"
        android:padding="4dp"
        android:text="@string/btn_delete_all"
        android:textSize="15sp"
        android:theme="@style/MyButton" />
</RelativeLayout>
