<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhao.faceverification.activity.FinishActivity">


    <TextView
        android:textSize="20sp"
        android:id="@+id/textDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentImage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:text="@string/result_text"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:id="@+id/resultText" />

    <ImageView
        android:id="@+id/currentImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_help_outline_black_48dp"
        android:layout_marginStart="39dp"
        android:layout_below="@+id/resultText"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/baseImage"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/ic_help_outline_black_48dp"
        android:layout_marginLeft="79dp"
        android:layout_below="@+id/resultText"
        android:layout_toEndOf="@+id/currentImage"
        android:layout_marginStart="12dp" />

    <TextView
        android:id="@+id/currentText"
        android:text="@string/currentImgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentImage"
        android:layout_toStartOf="@+id/baseImage" />

    <TextView
        android:id="@+id/baseText"
        android:text="@string/baseImgText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/baseImage"
        android:layout_alignStart="@+id/baseImage" />


</RelativeLayout>
